--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
-    "nodemon": "2.0.21",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
+    "nodemon": "2.0.21",
+    "passport": "^0.6.0",
+    "passport-oauth2": "^1.7.0",
     "square": "^25.0.0",
     "uuid": "^9.0.0"
   }
